compiler/tests/success/slh/x86-64/function_kills_msf_2.jazz
fn f(reg u64 x) {
    [x] = x;
}

export fn main(reg u64 x) -> reg u64 {
    reg u64 ms r;
    ms = #init_msf();
    f(x);
    r = #protect(r, ms);
    return r;
}